--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,14 +1,266 @@
+<!--
+ * @Author: zonacchen
+ * @Date: 2023-03-08 19:33:03
+ * @LastEditors: zonacchen
+ * @LastEditTime: 2023-03-08 23:26:07
+ * @Description: index
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>welcome to 2020</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>search index</title>
+    <script type="text/javascript">
+        window.onload=function(){
+            const data=[
+                {"id": "1","text":"天蓝釉兽面纹螭耳尊是哪个朝代的文物？"},
+                {"id": "2","text":"定林寺遗址在哪里？"},
+                {"id": "3","text":"瓦卢比利斯考古遗址那个年代的？"},
+                {"id": "4","text":"古魏城遗址是那个省的？"},
+                {"id": "5","text":"郭沫若名句印章是谁的？"},
+                {"id": "6","text":"瓦卢比利斯考古遗址在哪个国家？"},
+                {"id": "7","text":"杭头遗址在哪里啊？"},
+                {"id": "8","text":"明银铃长宽高是多少？"},
+                {"id": "9","text":"唐王寨遗址在哪里？"},
+                {"id": "10","text":"南村古城遗址在哪里？"}
+            ]
+            let query=document.getElementById('query');
+            let suggList=document.getElementById('list');
+            let queryBox=document.getElementById('queryBox')
+            let suggBox=document.getElementById('suggBox')
+            // 封装ajax 
+            function ajax(url,callback){
+                const xhr=new XMLHttpRequest();
+                xhr.open('get',url)
+                xhr.send()
+                xhr.onreadystatechange=()=>{
+                    if(xhr.readyState===4 && xhr.states===200){
+                        const res=xhr.response;
+                        callback(res) 
+                    }
+                }
+            }
+            function promis(url){
+                return new promis((resolve,reject)=>{
+                    ajax(url,res=>{
+                        resolve(res)
+                    })
+                })
+            }
+            query.onfocus=function(){
+                queryBox.className='queryBox queryHover';
+                suggBox.style.display='block'
+                // promis(url).then(res=>{
+                //     let listEle=''
+                //     res.map(item=>{
+                //         listEle+=`<li><p>${item.text}</p><span>删除</span></li>`
+                //     })
+                //     // console.log(listEle)
+                //     suggList.innerHTML=listEle
+                // })
+                let listEle=''
+                data.map(item=>{
+                    listEle+=`<li><p>${item.text}</p><span>删除</span></li>`
+                })
+                // console.log(listEle)
+                suggList.innerHTML=listEle
+            }
+            query.onblur=function(){
+                queryBox.className='queryBox';
+                suggBox.style.display='none';
+                let listEle=''
+            }
+        }
+        
+        
+    </script>
+    <style>
+        div,input,body,html,ul,li,p{
+            margin: 0;
+            border: 0;
+            padding: 0;
+        }
+        ul{
+            list-style-type: none;
+        }
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            font-family: 'microsoft yahei';
+        }
+        .searchBody{
+            min-height: calc(100vh -20vh);
+            padding-top: 20vh;
+        }
+        .logo{
+            font-size: 32px;
+            text-align: center;
+            padding-bottom: 30px;
+        }
+        .searchBox{
+            width: 600px;
+            
+            position: relative;
+            height: 44px;
+        }
+        .queryBox{
+            display: flex;
+            height: 100%;
+            border-radius: 20px;
+            position: relative;
+            z-index: 3;
+            box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+            
+        }
+        .queryBox.queryHover{
+            box-shadow:none; 
+        }
+        .query{
+            background-color: #ccc;
+            border-radius: 20px 0 0 20px;
+            height: 100%;
+            -webkit-appearance:none;
+            display: block;
+            flex-grow: 1;
+            outline: none;
+            padding-left:20px;
+            margin-right: 20px;
+            font-size: 18px;
+            background: transparent;
+        }
+        .query:focus,.query:hover{
+            border: 0;
+            outline: none;
+        }
+        .queryBox button{
+            border: 0;
+            background: transparent;
+            border-radius: 0 20px 20px 0;
+            width: 60px;
+            font-size: 0;
+            position: relative;
+            background: url(../static/img/search.png) center center/24px no-repeat;
+            cursor: pointer;
+        }
+        
+        .queryBox button::after{
+            content: '';
+            height: 16px;
+            width: 1px;
+            position: absolute;
+            top: 50%;
+            margin-top: -8px;
+            background-color: #e8e8e8;
+            left: 0;
+        }
+
+        .suggBox{
+            position: absolute;
+            padding-top: 45px;
+            border-radius: 20px;
+            left: 0;
+            right: 0;
+            top: 0;
+
+            box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+            z-index: 2;
+
+        }
+        .suggBox::after{
+            content: '';
+            height: 0;
+            overflow: hidden;
+            position: absolute;
+            left: 20px;
+            right: 20px;
+            top: 45px;
+            border-top: 1px solid rgba(232, 232, 232, .8);
+        }
+        .suginner{
+            /* margin: 0 20px; */
+            padding-top: 5px;
+            /* border-top: 1px solid rgba(232, 232, 232, .8); */
+        }
+        .suginner li{
+            line-height: 38px;
+            padding: 0 20px;
+            display: flex;
+            cursor: pointer;
+            
+        }
+        .suginner li p{
+            flex-grow: 1;
+        }
+        .suginner li span{
+            display: none;
+            font-size: 0;
+            width: 30px;
+
+            background: url(../static/img/delete.png) center center/18px no-repeat;
+        }
+        .suginner li:hover span{
+            display: block;
+        }
+        
+
+        .suginner li:hover{
+            background:rgba(232, 232, 232, .8);
+        }
+        .suginner ul{
+            margin-bottom: 5px;
+        }
+        .sugClear{
+            border-top: 1px solid rgba(232, 232, 232, .6);
+            line-height: 40px;
+            color: #666;
+            text-align: right;
+            margin: 0 20px;
+        }
+        .sugClear span:hover{
+            cursor: pointer;
+        }
+        
+    </style>
 </head>
 <body>
-   welcome to my webpage
-  <hr>
-   <p>这是采用render_template模板方法获得的内容:</p>
-   <br>
-  {{dataxxx}}  #显示出传递过来的变量内容
+    <div class="searchBody">
+        <div class="logo">基于机器阅读理解的文化遗产问答系统</div>
+        <form
+            @submit=""
+            @reset=""
+        >
+            <div class="searchBox">
+                <div class="queryBox" id="queryBox">
+                    <input type="text" class="query" id="query">
+                    <button
+                        :disabled=""
+                        :loading=""
+                        open-type=""
+                        hover-class="button-hover"
+                        @click=""
+                    >
+                        搜索
+                    </button>
+                </div>
+                <div class="suggBox" id="suggBox" style="display: none;">
+                    <div class="suginner">
+                        <ul class="suglist" id="list">
+                            <li><p>物流</p><span>删除</span></li>
+                        </ul>
+                        <div class="sugClear" style="display: block;">
+                            <span>清除历史</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="result"></div>
+
+    </div>
+    
 </body>
 </html>
