--- a/Templates/index.html
+++ b/Templates/index.html
@@ -13,7 +13,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>search index</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="text/javascript" src="http://fw.qq.com/ipaddress" charset="gb2312"/>
+
+    <script>
+        function ipJson(ipJson) {
+            {#console.log('获取到的网络IP', ipJson);#}
+            //可以把结果存在window上，方便调用
+            window.ipJson = ipJson;
+        }
+    </script>
+    <script src="//whois.pconline.com.cn/ipJson.jsp?callback=ipJson" type="text/javascript"></script>
+
     <script type="text/javascript">
         window.onload = function () {
             const data = [
@@ -34,6 +43,7 @@
             let suggBox = document.getElementById('suggBox')
             let searchBtn = document.getElementById('searchBtn')
             let queryText = ''
+
             let result = document.getElementById('result')
 
 
@@ -57,80 +67,25 @@
                 suggList.innerHTML = listEle
             }
 
-            function queryFun() {
-                console.log(query.value == '')
-                if (query.value == '') return
-                queryText = "question=" + query.value
-                // console.log(queryText)
-            }
 
 
-            const getIPs = (callback) => {
-                var ip_dups = {};
-                var RTCPeerConnection = window.RTCPeerConnection
-                    || window.mozRTCPeerConnection
-                    || window.webkitRTCPeerConnection;
-                var useWebKit = !!window.webkitRTCPeerConnection;
-                var mediaConstraints = {
-                    optional: [{RtpDataChannels: true}]
-                };
-                // 这里就是需要的ICEServer了
-                var servers = {
-                    iceServers: [
-                        {urls: "stun:stun.services.mozilla.com"},
-                        {urls: "stun:stun.l.google.com:19302"},
-                    ]
-                };
-                var pc = new RTCPeerConnection(servers, mediaConstraints);
-
-                function handleCandidate(candidate) {
-                    var ip_regex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/
-                    var hasIp = ip_regex.exec(candidate)
-                    if (hasIp) {
-                        var ip_addr = ip_regex.exec(candidate)[1];
-                        if (ip_dups[ip_addr] === undefined)
-                            callback(ip_addr);
-                        ip_dups[ip_addr] = true;
-                    }
-                }
-
-                // 网络协商的过程
-                pc.onicecandidate = function (ice) {
-                    if (ice.candidate) {
-                        handleCandidate(ice.candidate.candidate);
-                    }
-                };
-                pc.createDataChannel("");
-                //创建一个SDP(session description protocol)会话描述协议 是一个纯文本信息 包含了媒体和网络协商的信息
-                pc.createOffer(function (result) {
-                    pc.setLocalDescription(result, function () {
-                    }, function () {
-                    });
-                }, function () {
-                });
-                setTimeout(function () {
-                    var lines = pc.localDescription.sdp.split('\n');
-                    lines.forEach(function (line) {
-                        if (line.indexOf('a=candidate:') === 0)
-                            handleCandidate(line);
-                    });
-                }, 1000);
-            }
 
 
             searchBtn.onclick = function () {
-                queryFun()
+                deliverdata = "question=" + query.value+"&ip="+window.ipJson.ip
                 // promisFun(url).then(res=>{
                 //     result.innerHTML=res
                 // })
                 // query.value=''
-                getIPs((ip) => {
-  console.log('ip', ip)
-})
+
+
+                console.log(deliverdata)
+                {#console.log(IPData[0] + "，来自：" + IPData[2])#}
+
                 axios.request({
                     url: "http://localhost:5000/getAnswer",
                     method: "post",
-                    data: queryText
+                    data: deliverdata
                 }).then(res => {
 
                     let data = res.data
@@ -153,6 +108,7 @@
 
         }
     </script>
+
 
 
     <style>
