--- a/Templates/backwardindex.html
+++ b/Templates/backwardindex.html
@@ -70,8 +70,8 @@
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active menua" href="aduitpassage"  target="mainFrame">
+                    <li class="nav-item " >
+                        <a class="nav-link menua" href="aduitpassage"  target="mainFrame">
                             <span data-feather="home"></span>
                             文本审核 <span class="sr-only">(current)</span>
                         </a>
@@ -81,7 +81,7 @@
                     <li class="nav-item">
                         <a class="nav-link  menua" href="aduithistory"  target="mainFrame">
                             <span data-feather="home"></span>
-                            记录审核 <span class="sr-only">(current)</span>
+                            记录审核
                         </a>
                     </li>
                 </ul>
@@ -89,7 +89,7 @@
         </nav>
         <!-- 中间主体内容部分 -->
         <main class="main col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <iframe src="user.html" src="@{/user}" id="mainFrame" name="mainFrame" width="100%" height="900px"
+            <iframe src="aduitpassage" id="mainFrame" name="mainFrame" width="100%" height="900px"
                     frameBorder="0"></iframe>
         </main>
     </div>
