--- a/Templates/peoplemanage.html
+++ b/Templates/peoplemanage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>历史记录审核</title>
+    <title>人事管理</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
@@ -85,8 +85,8 @@
             <button class="btn btn-success" type="button" id="add" hidden>
                 添加
             </button>
-            <h3>记录审核 &nbsp;</h3>
-            <input class="form-control" type="text" id="username" placeholder="请输入记录关键字，按回车键">
+            <h3>人员管理&nbsp;</h3>
+            <input class="form-control" type="text" id="username" placeholder="请输入名字，按回车键">
             <span class="input-group-btn">
 					<button class="btn btn-primary" type="button" id="search">
 																		查询
