--- a/Templates/aduitpassage.html
+++ b/Templates/aduitpassage.html
@@ -5,9 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>内容记录审核</title>
+    <title>文本审核</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap-paginator.js"></script>
+    <script src="../static/js/util.js"></script>
+    <script>
+        function ipJson(ipJson) {
+            // console.log('获取到的网络IP', ipJson)
+            //可以把结果存在window上，方便调用
+            window.ipJson = ipJson;
+        }
+    </script>
+    <script src="//whois.pconline.com.cn/ipJson.jsp?callback=ipJson" type="text/javascript"></script>
     <style type="text/css">
         .container {
             padding: 20px;
@@ -33,18 +44,18 @@
             border-radius: 4px;
         }
 
-        .pagination>li:last-child>a, .pagination>li:last-child>span {
+        .pagination > li:last-child > a, .pagination > li:last-child > span {
             border-top-right-radius: 4px;
             border-bottom-right-radius: 4px;
         }
 
-        .pagination>li:first-child>a, .pagination>li:first-child>span {
+        .pagination > li:first-child > a, .pagination > li:first-child > span {
             margin-left: 0;
             border-top-left-radius: 4px;
             border-bottom-left-radius: 4px;
         }
 
-        .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+        .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
             z-index: 3;
             color: #fff;
             cursor: default;
@@ -52,7 +63,7 @@
             border-color: #337ab7;
         }
 
-        .pagination>li>a, .pagination>li>span {
+        .pagination > li > a, .pagination > li > span {
             position: relative;
             float: left;
             padding: 6px 12px;
@@ -71,10 +82,11 @@
     <input type="text" id="ctx" hidden="hidden" th:value="">
     <div class="search">
         <div class="input-group col-md-8">
-            <button class="btn btn-success" type="button" id="add">
+            <button class="btn btn-success" type="button" id="add" hidden>
                 添加
             </button>
-            <input class="form-control" type="text" id="username" placeholder="请输入账号，按回车键">
+            <h3>文本审核 &nbsp;</h3>
+            <input class="form-control" type="text" id="username" placeholder="请输入文本关键字，按回车键">
             <span class="input-group-btn">
 					<button class="btn btn-primary" type="button" id="search">
 																		查询
@@ -90,10 +102,11 @@
                     <table class="table table-striped table-hover" id="dataTable">
                         <thead>
                         <tr>
-                            <th>用户名</th>
-                            <th>邮箱</th>
-                            <th>姓名</th>
-                            <th>创建时间</th>
+                            <th>ip</th>
+                            <th>问句</th>
+                            <th>审核状态</th>
+                            <th>检索时间</th>
+                            <th>修改实践</th>
                             <th>操作</th>
                         </tr>
                         </thead>
@@ -150,10 +163,7 @@
     </div>
     <!-- /.modal -->
 </div>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
-<script th:src="@{/js/bootstrap-paginator.js}"></script>
-<script src="../js/util.js" th:src="@{/js/util.js}"></script>
+
 
 <script type="text/javascript">
     var ctx = $("#ctx").val();
@@ -183,37 +193,41 @@
     function getPage(pageNo) {
         var dataRow = "";
         $.ajax({
-                url: ctx + "/user/list",
+                url: ctx + "searchBackwardHistory",
                 type: "post",
                 data: {
                     "username": $("#username").val(),
-                    "pageNo": pageNo
+                    "pageNo": pageNo,
+                    "ip": window.ipJson.ip
                 },
                 dataType: "json",
                 success: function (response) {
                     dataRow = "";
                     if (response.data.records.length > 0) {
                         $.each(response.data.records, function (i, r) {
+                            console.log(r)
                             dataRow += '<tr>'
-                                + '<td>'
-                                + r.username
-                                + '</td>'
-                                + '<td>'
-                                + r.email
-                                + '</td><td>'
-                                + r.truename + '</td>'
+                                + '<td>' + r.mac_address + '</td>'
+                                + '<td>' + r.search_data + '</td>'
+                                + '<td>' + transformaudit(r.audit) + '</td>'
+                                + '<td>' + r.insert_time + '</td>'
+                                + '<td>' + r.update_time + '</td>'
                             ;
 
-                            dataRow += '<td>' + new Date(r.createTime).Format("yyyy-MM-dd hh:mm:ss") + '</td><td><a href="javascript:remove(' + r.id + ')" style="color: #CA0C16;">删除' +
-                                '</a>&nbsp;&nbsp;<a href="javascript:edit(' + r.id + ')">编辑</a></td></tr>';
+                            dataRow += '<td>'
+                                + '<a href="javascript:aduittrue(' + r.id + ')">通过</a>'
+                                + '&nbsp;&nbsp;'
+                                + '<a href="javascript:aduitfalse(' + r.id + ')" style="color: #CA0C16;">否决</a>'
+                                + '</td>'
+                                + '</tr>';
                         });
                     }
 
                     // console.log(dataRow);
                     $("#dataTable tbody").empty();
                     $("#dataTable tbody").append(dataRow);
-                    // 分页按钮
-                    var element = $('#pageButton');
+
+
                     var options = {
                         bootstrapMajorVersion: 4,
                         currentPage: pageNo, // 当前页数
@@ -238,22 +252,33 @@
                             getPage(page);
                         }
                     };
-
-                    element.bootstrapPaginator(options);
+                    // 分页按钮
+                    $('#pageButton').bootstrapPaginator(options);
                 }
             }
         )
     }
 
+    function transformaudit(auditstatus) {
+        if (auditstatus == -1) {
+            return "否决"
+        } else if (auditstatus == 0) {
+            return "未审核"
+        } else {
+            return "通过"
+        }
+    }
+
     //删除
-    function remove(id) {
-        if (confirm("确定删除数据？")) {
+    function aduitfalse(id) {
+        if (confirm("确定否决问句？")) {
             $.ajax({
                 type: "POST",
-                url: ctx + "/user/remove",
-                traditional: true,
+                url: ctx + "searchupdate",
+                dataType: "json",
                 data: {
-                    id: id
+                    id: id,
+                    audit: -1
                 },
                 success: function (data) {
                     getPage(1);
@@ -264,6 +289,27 @@
                 }
             });
         }
+    }
+
+    function aduittrue(id) {
+
+        $.ajax({
+            type: "POST",
+            url: ctx + "searchupdate",
+            dataType: "json",
+            data: {
+                id: id,
+                audit: 1
+            },
+            success: function (data) {
+                getPage(1);
+            },
+            error: function (e) {
+                //alert("ERROR: ", e);
+                console.log("ERROR: ", e);
+            }
+        });
+
     }
 
     function edit(id) {
@@ -296,7 +342,7 @@
         var email = $("#m_email").val();
         var truename = $("#m_truename").val();
 
-        var param = {"id": id, username: username, password:password, email: email, truename: truename};
+        var param = {"id": id, username: username, password: password, email: email, truename: truename};
 
         $.ajax({
             url: ctx + "/user/modify",
