--- a/Templates/backwardindex.html
+++ b/Templates/backwardindex.html
@@ -21,26 +21,28 @@
             z-index: 10;
             background-color: #343a40;
         }
-        .footer a{
-            font-family:  Georgia, "Times New Roman", Times, serif;;
+
+        .footer a {
+            font-family: Georgia, "Times New Roman", Times, serif;;
             color: #fff;
         }
 
-        .navbar-nav{
+        .navbar-nav {
             width: 300px;
             float: left !important;
             display: block !important;
         }
-        .nav-item{
+
+        .nav-item {
             padding-left: 20px;
             float: left !important;
         }
 
-        .menua{
+        .menua {
             font-size: 1.2em;
         }
 
-        .menua:hover{
+        .menua:hover {
             background: #fff;
         }
     </style>
@@ -50,16 +52,17 @@
 <!--顶部导航栏部分-->
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">文化遗产后台</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
+            data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <!--<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">-->
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">当前用户：<span class="badge" >admin</span></a>
+            <a class="nav-link" href="#">当前用户：<span class="badge">{{ username }}</span></a>
         </li>
-        <li class="nav-item text-nowrap">
-            <a class="nav-link" href="@{/logout}">退出</a>
+
+        <a class="nav-link" href="/logout"> &nbsp;&nbsp;退出</a>
         </li>
     </ul>
 </nav>
@@ -70,18 +73,28 @@
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
-                    <li class="nav-item " >
-                        <a class="nav-link menua" href="aduitpassage"  target="mainFrame">
+                    <li class="nav-item active">
+                        <a id="wenbena" class="nav-link menua" href='aduitpassage?id={{ id }}&username={{ username }}'
+                           target="mainFrame">
                             <span data-feather="home"></span>
                             文本审核 <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                </ul>
-                                <ul class="nav flex-column">
+
+
                     <li class="nav-item">
-                        <a class="nav-link  menua" href="aduithistory"  target="mainFrame">
+                        <a id="jilua" class="nav-link  menua" href='aduithistory?id={{ id }}&username={{ username }}'
+                           target="mainFrame">
                             <span data-feather="home"></span>
                             记录审核
+                        </a>
+                    </li>
+
+                    <li id="renyaunli" class="nav-item " hidden>
+                        <a  class="nav-link  menua " hidden
+                           href='peoplemanage?id={{ id }}&username=+{{ username }}' target="mainFrame">
+                            <span data-feather="home"></span>
+                            人员管理
                         </a>
                     </li>
                 </ul>
@@ -89,7 +102,8 @@
         </nav>
         <!-- 中间主体内容部分 -->
         <main class="main col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <iframe src="aduitpassage" id="mainFrame" name="mainFrame" width="100%" height="900px"
+            <iframe src='aduitpassage?id={{ id }}&username={{ username }}' id="mainFrame" name="mainFrame" width="100%"
+                    height="900px"
                     frameBorder="0"></iframe>
         </main>
     </div>
@@ -104,6 +118,20 @@
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
+<script>
+    window.onload = function () {
+        var flaskid =
+        {{ id }}
+        if (flaskid == 1) {
+            console.log("-----------------运行到这------------")
+            console.log($("#renyaunli"))
+            $("#renyaunli").toggle();
+
+        }
+
+
+    }
+</script>
 </body>
 
 </html>
